--- a/GPS_Route_Tracker.html
+++ b/GPS_Route_Tracker.html
@@ -1,1 +1,120 @@
-1
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>GPS Route Tracke</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="default.css" rel="stylesheet" type="text/css" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+
+<style>
+	body {
+		margin: 0em;
+		padding: 0 10%;
+		font-family: 'Lato', sans-serif;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		font-weight: 300;
+		margin-top:40px;
+	}
+
+	p, ol, ul {
+		font-size: 1em;
+	}
+	li {
+		margin: 10px 0;
+	}
+
+	ul {
+		list-style-type: none;
+	}
+	ul::after {
+		display: block;
+		float: none;
+		clear: both; 
+		content: " ";
+	}
+	.screenshots {
+			padding-left:0px;
+	}
+	.screenshots li {
+		float: left;
+		margin: 0 10px;
+	}
+	.screenshots li:first-child {
+		margin-left: 0;
+		padding-left: 0px;
+	}
+
+	h1 {
+		padding-bottom: 0;
+		margin-bottom: 0;
+	}
+	
+	p {
+		margin-top: 10px;
+		margin-bottom: 30px;
+	}
+	.cryptedmail:after {
+		content: attr(data-name) "@" attr(data-domain) "." attr(data-tld); 
+	}
+</style>
+
+</head>
+<body>
+
+		<h1>GPS Route Tracker</h1>
+		<p>Android mobile application for tracking your daily routes.</p>
+ 
+ 
+		<h2>About</h2>
+		<p>GPS Route Tracker is free mobile application that enables you to record your daily tracks. 
+		After you start the tracking you can close the app and it will continue to record your route in background.
+		You can pause, resume and stop recording at any time. Your saved routes will be visible in the "History" section of the application.
+		</p>
+		
+		<h2>Screenshots</h2>
+		<ul class="screenshots">
+			<li>
+				<a href="https://mitov84.github.io/images/GPS%20Tracker_Tracking.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images/GPS%20Tracker_Tracking.jpg" alt="GPS Tracker Tracking Screen" height="300px" />
+				</a>
+			</li>
+			<li>
+				<a href="https://mitov84.github.io/images/GPS%20Tracker_History.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images/GPS%20Tracker_History.jpg" alt="GPS Tracker History Screen" height="300px" />
+				</a>
+			</li>
+			<li>
+				<a href="https://mitov84.github.io/images/GPS%20Tracker_View_Route.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images/GPS%20Tracker_View_Route.jpg" alt="GPS Tracker View Route" height="300px" />
+				</a>
+			</li>
+			<li>
+				<a href="https://mitov84.github.io/images/GPS%20Tracker_Splash.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images/GPS%20Tracker_Splash.jpg" alt="GPS Tracker Tracking Screen" height="300px" />
+				</a>
+			</li>
+		</ul>
+		
+ 
+		<h2>Recent Updates</h2>
+		<p><strong>[29/08/2022]</strong> Released first version</p>
+		
+		
+		<h2>Documents</h2>
+		<ul>
+			<li><a href="https://mitov84.github.io/GPS_Tracker_Terms.html">Tersm and Conditions</a></li>
+			<li><a href="https://mitov84.github.io/GPS_Tracker_Privacy_Policy.html#">Privacy policy</a></li>
+		</ul>
+ 
+		<h2>Contact & Feedback</h2>
+		<p data-name="arhiled" data-domain="proton" data-tld="me" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
+ 
+</html>
