--- a/GPS_Route_Tracker.html
+++ b/GPS_Route_Tracker.html
@@ -3,10 +3,10 @@
 
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>GPS Route Tracke</title>
+<title>GPS Route Tracker</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="default.css" rel="stylesheet" type="text/css" />
+<!-- <link href="default.css" rel="stylesheet" type="text/css" /> -->
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
