added page for GPS API logger

--- a/GPS_Family.html
+++ b/GPS_Family.html
@@ -23,7 +23,10 @@
 		font-weight: 300;
 		margin-top:40px;
 	}
-
+	p {
+		max-width: 600px;
+		line-height: 1.4em;
+	}
 	p, ol, ul {
 		font-size: 1em;
 	}
@@ -74,22 +77,44 @@
  
  
 		<h2>About</h2>
-		<p>GPS Family is mobile application that enables you to track in real time the location of your family members.
-	
+		<p>
+			Discover peace of mind with GPS Family, the ultimate app for tracking your family's whereabouts in real-time. 
+			With GPS Family, you can easily monitor the location of your family members at any time and from anywhere. 
+			Find out when your children arrive at school, see when Mom is on her way home from work, 
+			and keep tabs on elderly family members who may be prone to wandering. 
+			GPS Family is easy to use and gives you the assurance that your loved ones are safe and sound. 
+			<br/>
+			Download GPS Family now and rest easy knowing your family is always just a few taps away.
 		</p>
 		
 		<h2>Screenshots</h2>
 		<ul class="screenshots">
 			<li>
-				<a href="https://mitov84.github.io/images_gps_family/GPS_Family_Main.jpg" target="_blank" >	
-					<img src="https://mitov84.github.io/images_gps_family/GPS_Family_Main.jpg" alt="GPS Family Main screen" height="300px" />
+				<a href="https://mitov84.github.io/images_gps_family/01_GPS_Family_login.jpg" target="_blank" >	
+					<img src="https://mitov84.github.io/images_gps_family/01_GPS_Family_login.jpg" alt="01_GPS_Family_login" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images_gps_family/GPS_Family_Zoom.jpg" target="_blank" >	
-					<img src="https://mitov84.github.io/images_gps_family/GPS_Family_Zoom.jpg" alt="GPS Family Main screen" height="300px" />
+				<a href="https://mitov84.github.io/images_gps_family/02_GPS_Family_group_list.jpg" target="_blank" >	
+					<img src="https://mitov84.github.io/images_gps_family/02_GPS_Family_group_list.jpg" alt="02_GPS_Family_group_list" height="300px" />
 				</a>
 			</li>
+			<li>
+				<a href="https://mitov84.github.io/images_gps_family/03_GPS_Family_group_view.jpg" target="_blank" >	
+					<img src="https://mitov84.github.io/images_gps_family/03_GPS_Family_group_view.jpg" alt="03_GPS_Family_group_view" height="300px" />
+				</a>
+			</li>
+			<li>
+				<a href="https://mitov84.github.io/images_gps_family/04_GPS_Family_group_members.jpg" target="_blank" >	
+					<img src="https://mitov84.github.io/images_gps_family/04_GPS_Family_group_members.jpg" alt="04_GPS_Family_group_members" height="300px" />
+				</a>
+			</li>
+			<li>
+				<a href="https://mitov84.github.io/images_gps_family/05_GPS_Family_member_details.jpg" target="_blank" >	
+					<img src="https://mitov84.github.io/images_gps_family/05_GPS_Family_member_details.jpg" alt="05_GPS_Family_member_details" height="300px" />
+				</a>
+			</li>
+
 		</ul>
 		
  
