--- a/GPS_Route_Tracker.html
+++ b/GPS_Route_Tracker.html
@@ -23,7 +23,10 @@
 		font-weight: 300;
 		margin-top:40px;
 	}
-
+	p {
+		max-width: 600px;
+		line-height: 1.4em;
+	}
 	p, ol, ul {
 		font-size: 1em;
 	}
@@ -70,15 +73,25 @@
 <body>
 
 		<h1>GPS Route Tracker</h1>
-		<p>Android mobile application for tracking your daily routes.</p>
+		<p>Stay On Track with GPS Route Tracker!</p>
  
  
 		<h2>About</h2>
-		<p>GPS Route Tracker is free mobile application that enables you to record your daily tracks. 
-		After you start the tracking you can close the app and it will continue to record your route in background.
-		You can pause, resume and stop recording at any time. Your saved routes will be visible in the "History" section of the application.
+		<p>
+			GPS Route Tracker is a free mobile application that helps you effortlessly track your daily travels. 
+			All you have to do is start the tracking session and you can then close the app; 
+			it will continue to record your route in the background. 
+			Whether you need to pause, resume, or stop recording, you can do so with just a few taps. 
+			Your saved routes will be visible in the "History" section of the app, so you can easily review your progress anytime. 
+			<br/>
+			Download GPS Route Tracker today and start keeping track of your journeys!
 		</p>
 		
+		<h2>Download</h2>
+		<p>
+			<a href="https://play.google.com/store/apps/details?id=com.arhiled.gpstracker"  target="_blank">Download from Google Playstore</a>
+		</p>
+
 		<h2>Screenshots</h2>
 		<ul class="screenshots">
 			<li>
@@ -107,6 +120,7 @@
 		<h2>Recent Updates</h2>
 		<p><strong>[29/08/2022]</strong> Released first version</p>
 		
+
 		
 		<h2>Documents</h2>
 		<ul>
