fix short description

--- a/GPS_API_Logger.html
+++ b/GPS_API_Logger.html
@@ -73,7 +73,7 @@
 <body>
 
 		<h1>GPS API Logger</h1>
-		<p>Android mobile application for tracking your daily routes.</p>
+		<p>Send location data from your android device to specified endpoint.</p>
  
  
 		<h2>About</h2>
