links to new terms and privacy policy

--- a/GPS_API_Logger.html
+++ b/GPS_API_Logger.html
@@ -123,8 +123,8 @@
 		
 		<h2>Documents</h2>
 		<ul>
-			<li><a href="#">Tersm and Conditions</a></li>
-			<li><a href="#">Privacy policy</a></li>
+			<li><a href="https://mitov84.github.io/GPS_API_Logger_Terms.html">Tersm and Conditions</a></li>
+			<li><a href="https://mitov84.github.io/GPS_API_Logger_Privacy_Policy.html">Privacy policy</a></li>
 		</ul>
  
 		<h2>Contact & Feedback</h2>
