--- a/GPS_API_Logger_Privacy_Policy.html
+++ b/GPS_API_Logger_Privacy_Policy.html
@@ -72,7 +72,7 @@
 	
 		<h1>Privacy Policy</h1>
 		<p>
-			Arhiled LTD built the GPS Route Tracker app as
+			Arhiled LTD built the GPS API Logger app as
 			an Ad Supported app. This SERVICE is provided by
 			Arhiled LTD at no cost and is intended for use as
 			is.
@@ -96,27 +96,27 @@
 		
 			
 		<h2>Information Collection and Use</h2>
-		<p>GPS Route Tracker collects location data to enable user route tracking even when app is closed or not in use. 
+		<p>GPS API Logger collects location data to enable user route tracking even when app is closed or not in use. 
 			We may collect, with Your prior permission:
 			<ul>
 				<li>Location data</li>
 			</ul>
 		</p>
-		<p>We use this information to provide features of GPS Route Tracker, e.g. tracking your exact route and displaying statistics regarding your movement.
+		<p>We use this information to provide features of GPS API Logger, e.g. tracking your exact route and displaying statistics regarding your movement.
 			The information may not be uploaded to the Company’s servers but it may be simply stored on Your device.
 			We will not share your current location or any other location data with other users or partners without your permission.
 		</p>
 		
 		<p>
 			We do not collect personally identifiable information. 
-			All information GPS Route Tracker collects is stored on your device and is not collected by us in any way.
+			All information GPS API Logger collects is stored on your device and is not collected by us in any way.
 		</p>
 		<div>
 			<p>
-				GPS Route Tracker does use third-party services that may collect information used to identify you.
+				GPS API Logger does use third-party services that may collect information used to identify you.
 			</p>
 			<p>
-				Link to the privacy policy of third-party service providers used by GPS Route Tracker
+				Link to the privacy policy of third-party service providers used by GPS API Logger
 			</p>
 			<ul>
 				<li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
@@ -170,7 +170,7 @@
 			stored on your device's internal memory.
 		</p>
 		<p>
-			GPS Route Tracker does not use these “cookies” explicitly. However,
+			GPS API Logger does not use these “cookies” explicitly. However,
 			the app may use third-party code and libraries that use
 			“cookies” to collect information and improve their services.
 		</p>
