api logger update

--- a/GPS_API_Logger.html
+++ b/GPS_API_Logger.html
@@ -78,13 +78,14 @@
  
 		<h2>About</h2>
 		<p>
-			Introducing GPS API Logger – an android application that can access your device location even when the application is not running.
-			With GPS API Logger, you can easily send simple HTTP requests with your location data to specified endpoints.
-
-			GPS API Logger is perfect for those who need to keep track of their user location for home automation projects or any other project.
+			
+			With GPS API Logger you can easily send simple HTTP requests with your device location to specified by you endpoints.
+			GPS API Logger is an android application that can access your device location even when the application is not running.
+			<br/>
+			GPS API Logger is perfect for those who need to keep track of their user location for home automation projects 
+			or any other project.
 			It is easy to use and can be set up in no time. 
 			With GPS API Logger, you can customize the frequency of location updates.
-			LocationTracker is the perfect solution for anyone looking for an easy and efficient way to track user location. 
 		</p>
 		
 		<h2>Screenshots</h2>
