Bubble level terms

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 			<li>
 				<a href="MyArhiled.html" target="">MyArhiled</a>
 			</li>
+			<li>
+				<a href="Bubble_level.html" target="">MyArhiled</a>
+			</li>
 		</ul>
 		
 		
