--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<a href="MyArhiled.html" target="">MyArhiled</a>
 			</li>
 			<li>
-				<a href="Bubble_level.html" target="">MyArhiled</a>
+				<a href="Bubble_level.html" target="">Bubble level</a>
 			</li>
 		</ul>
 		
