--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 			<li>
 				<a href="Bubble_level.html" target="">Bubble level</a>
 			</li>
+			<li>
+				<a href="Letters.html" target="">Learn the letters</a>
+			</li>
 		</ul>
 		
 		
