--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 			<li>
 				<a href="Letters.html" target="">Learn the letters</a>
 			</li>
+			<li>
+				<a href="Altimeter.html" target="">Altimeter</a>
+			</li>
 		</ul>
 		
 		
