--- a/Altimeter.html
+++ b/Altimeter.html
@@ -111,11 +111,20 @@
 		<h2>Screenshots</h2>
 		<ul class="screenshots">
 			<li>
-				<a href="https://mitov84.github.io/images/" target="_blank" >
-					<img src="https://mitov84.github.io/images_altimeter" alt="Altimeter home" height="300px" />
+				<a href="https://mitov84.github.io/images_altimeter/1.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_altimeter/1.png" alt="Altimeter home" height="300px" />
 				</a>
 			</li>
-
+			<li>
+				<a href="https://mitov84.github.io/images_altimeter/2.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_altimeter/2.png" alt="Altimeter weather" height="300px" />
+				</a>
+			</li>
+			<li>
+				<a href="https://mitov84.github.io/images_altimeter/2.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_altimeter/2.png" alt="Altimeter location" height="300px" />
+				</a>
+			</li>
 			
 		</ul>
 		
