--- a/Altimeter_Privacy_Policy.html
+++ b/Altimeter_Privacy_Policy.html
@@ -141,7 +141,7 @@
 			</ul>
 		</p>
 		
-		<h2>We Google Maps APIs</h2>
+		<h2>We use Google Maps APIs</h2>
 		<p>
 			We use Google Maps APIs for providing the users best services.
 			Google map have their privacy policy which is totally under their control. 
