--- a/GPS_Speedometer_Pro.html
+++ b/GPS_Speedometer_Pro.html
@@ -95,28 +95,28 @@
 		<h2>Screenshots</h2>
 		<ul class="screenshots">
 			<li>
-				<a href="https://mitov84.github.io/images/images_speedometer/a.jpg" target="_blank" >
-					<img src="https://mitov84.github.io/images_speedometer/a.jpg" alt="GPS Speedometer analog gauge" height="300px" />
+				<a href="https://mitov84.github.io/images_speedometer/a.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_speedometer/a.png" alt="GPS Speedometer analog gauge" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images/images_speedometer/b.jpg" target="_blank" >
-					<img src="https://mitov84.github.io/images_speedometer/b.jpg" alt="GPS Speedometer map" height="300px" />
+				<a href="https://mitov84.github.io/images_speedometer/b.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_speedometer/b.png" alt="GPS Speedometer map" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images/images_speedometer/c.jpg" target="_blank" >
-					<img src="https://mitov84.github.io/images_speedometer/c.jpg" alt="GPS Speedometer digital" height="300px" />
+				<a href="https://mitov84.github.io/images_speedometer/c.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_speedometer/c.png" alt="GPS Speedometer digital" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images/images_speedometer/x.jpg" target="_blank" >
-					<img src="https://mitov84.github.io/images_speedometer/x.jpg" alt="GPS Speedometer histoty" height="300px" />
+				<a href="https://mitov84.github.io/images_speedometer/x.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_speedometer/x.png" alt="GPS Speedometer histoty" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images/images_speedometer/y.jpg" target="_blank" >
-					<img src="https://mitov84.github.io/images_speedometer/y.jpg" alt="GPS Speedometer settings" height="300px" />
+				<a href="https://mitov84.github.io/images_speedometer/y.png" target="_blank" >
+					<img src="https://mitov84.github.io/images_speedometer/y.png" alt="GPS Speedometer settings" height="300px" />
 				</a>
 			</li>
 		</ul>
