--- a/GPS_Speedometer_Pro.html
+++ b/GPS_Speedometer_Pro.html
@@ -78,7 +78,7 @@
  
 		<h2>About</h2>
 		<p>
-			GPS Speedometer Pro is a free mobile application that helps you effortlessly track your daily travels. 
+			GPS Speedometer Pro is a mobile application that helps you effortlessly track your daily travels. 
 			All you have to do is start the tracking session and you can then close the app; 
 			it will continue to record your route in the background. 
 			Whether you need to pause, resume, or stop recording, you can do so with just a few taps. 
