--- a/GPS_Speedometer_Privacy_Policy.html
+++ b/GPS_Speedometer_Privacy_Policy.html
@@ -73,8 +73,8 @@
 		<h1>Privacy Policy</h1>
 		<p>
 			GPS Family LTD built the GPS Speedometer Pro app as
-			an Ad Supported app. This SERVICE is provided by
-			GPS Family LTD at no cost and is intended for use as
+			a paid app. This SERVICE is provided by
+			GPS Family LTD and is intended for use as
 			is.
 		</p>
 		<p>
