--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 		<h2>Android applications</h2>
 		<ul class="pages">
 			<li>
+				<a href="Fluid Control.html" target="">Fluid Control</a>
+			</li>
+			<li>
 				<a href="GPS_Speedometer_Pro.html" target="">GPS Speedometer Pro</a>
 			</li>
 			<li>
