--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 </head>
 <body>
 
-		<h1>Portfolio index</h1>
-		<p>A soon-to-be portfolio page.</p>
+		<h1>&nbsp;</h1>
+		<p>&nbsp;</p>
  
  
 		<h2>Android applications</h2>
