--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
 		<p><strong>[23/02/2023]</strong> First version of page</p>
 		
 		<h2>Contact & Feedback</h2>
-		<p data-name="arhiled" data-domain="proton" data-tld="me" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
+		<p data-name="support" data-domain="gps-family" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
  
 </html>
