--- a/Fluid_Control.html
+++ b/Fluid_Control.html
@@ -93,23 +93,23 @@
 		<h2>Screenshots</h2>
 		<ul class="screenshots">
 			<li>
-				<a href="https://mitov84.github.io/images_fluid/jog.png" target="_blank" >
-					<img src="https://mitov84.github.io/images_fluid/jog.png" alt="Jog control" height="300px" />
+				<a href="https://mitov84.github.io/images_fluid/jog.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images_fluid/jog.jpg" alt="Jog control" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images_fluid/terminal.png" target="_blank" >
-					<img src="https://mitov84.github.io/images_fluid/temrinal.png" alt="Terminal" height="300px" />
+				<a href="https://mitov84.github.io/images_fluid/terminal.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images_fluid/temrinal.jpg" alt="Terminal" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images_fluid/job.png" target="_blank" >
-					<img src="https://mitov84.github.io/images_fluid/job.png" alt="File sender" height="300px" />
+				<a href="https://mitov84.github.io/images_fluid/job.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images_fluid/job.jpg" alt="File sender" height="300px" />
 				</a>
 			</li>
 			<li>
-				<a href="https://mitov84.github.io/images_fluid/spindle.png" target="_blank" >
-					<img src="https://mitov84.github.io/images_fluid/spindle.png" alt="Spindle control" height="300px" />
+				<a href="https://mitov84.github.io/images_fluid/spindle.jpg" target="_blank" >
+					<img src="https://mitov84.github.io/images_fluid/spindle.jpg" alt="Spindle control" height="300px" />
 				</a>
 			</li>
 
