manual in progress

--- a/Fluid_Control.html
+++ b/Fluid_Control.html
@@ -84,6 +84,9 @@
 			<br/>
 			Ultimate remote control for your FluidNC CNC machine.
 		</p>
+		<p>
+			We are not affiliated with FluidNC in any way.
+		</p>
 		
 		<h2>Download</h2>
 		<p>
@@ -116,10 +119,12 @@
 		</ul>
 		
  
+		<h2>Manual</h2>
+		<p><a href="https://mitov84.github.io/Fluid_Control_Manual.html">Manual</a>
+		</p>
+		
 		<h2>Recent Updates</h2>
 		<p><strong>[16/03/2024]</strong> Released first version</p>
-		
-
 		
 		<h2>Documents</h2>
 		<ul>
