--- a/Fluid_Control_Manual.html
+++ b/Fluid_Control_Manual.html
@@ -95,7 +95,7 @@
 
 		<h2>Connect to FluidNC</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_c.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_a.jpg" alt="Settings screen" width="50%" class="left"/>
 			This application is using telnet port for communication with FluidNC controller. Before you attemp connecting to the machine make sure 
 			machine is connected to your Wi-Fi network and Telnet is enabled. To do this open a terminal to the machine and follow instructions <a href="http://wiki.fluidnc.com/en/features/wifi_bt">here</a>.
 			<br/><br/>
@@ -115,24 +115,39 @@
 			<img src="https://mitov84.github.io/images_fluid/manual/screen_jog.jpg" alt="Settings screen" width="50%" class="left"/>
 			Top quarter of display show current work and machine position. <br/>
 			Yellow buttons next to each coordinate axis sets the current machine position as work start coordinate in currently selected coordinate system.<br/>
-			Feed and step display the currently selected jog feed and step. Tab on them to change the feed and step. Supports decimal numbers.
+			Feed and step display the currently selected jog feed and step. Tap on them to change the feed and step. Supports decimal numbers.
 			<br/><br/>
 			Jog buttons for 4th axis will appear only if machine is configure to have 4 axesis. Feature is available only to Pro users.
+			<br/><br/>
+			THe top gray bar displays the current active G-codes.
+			<br/><br/>
+			G54 to G59 used to select work coordiante system.
+			<br/><br/>
+			Bottom row buttons "Padlock" - clears machine alert.
+			<br/><br/>
+			G20 and G21 switch between imperial and metric.
+			<br/><br/>
+			G90 and G91 switch between absolute and relative positioning.
 		</p>
+		<div class="clear"></div>
+
 
 		<h2>Terminal tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_temrinal.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_terminal.jpg" alt="Settings screen" width="50%" class="left"/>
 
 			Used to send user commands to the machine. Display up to 50 rows. White are machine output, blue are user input.<br/>
 			On top of the terminal you have 6 application macros. Configure the in settings with custom code you need to send to the machine. Supports multi line code.
 			<br/>
 			Custom macros are available only to Pro version users.
+			<br/><br/>
 		</p>
+		<div class="clear"></div>
+
 
 		<h2>Job tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_job.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_job_a.jpg" alt="Settings screen" width="50%" class="left"/>
 
 			This tab is use to send .nc or .gcode files to the machine. Application acts as G-code sender.<br/>
 			Jobs are running in foreground service and will display total lines and lines sent in app notification.<br/>
@@ -140,11 +155,15 @@
 			<br/>
 			While a job is in progress you can use the override feed and spindle buttons to increase/decrease machine feed rate and spindle speed.<br/>
 			On job start the overrides are set to 0. It's a design decision we made.
+			<br/><br/>
+
 		</p>
+		<div class="clear"></div>
+
 
 		<h2>Spindle tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_spindle.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_spindle_control.jpg" alt="Settings screen" width="50%" class="left"/>
 
 			Controls the spindle and coolant. <br/>
 			FluidNC will allow for spindle, mist and flood enabling only if they are assigned control pins on the controller.<br/>
@@ -153,8 +172,34 @@
 			Once probing is complete it will result in success or error. In either case a modal will show the result.<br/>
 			In case of failure machine will trigger alert, go to jog screen to clear it.<br/>
 			In case of success you can go back to jog tab and set current axis coordiantes as work coordiantes, entirely up to you.
-		</p>
+			<br/><br/>
 
+		</p>
+		<div class="clear"></div>
+
+		<h2>Settings screen</h2>
+		<p>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_b.jpg" alt="Settings screen" width="50%" class="left"/>
+
+			<h3>Telnet</h3>
+			<p>Configure connection to machine</p>
+
+			<h3>Job completion alerts</h3>
+			<p>Receive sound/vibratian alerts when a .nc, .gcode file sending is completed.</p>
+
+			<h3>Button feedback</h3>
+			<p>Sound or vibration feedback on button pressed.</p>
+
+			<h3>Probe</h3>
+			<p>Configure feed rate and distance to travel when probing. Supports decimal numbers.</p>
+
+			<h3>Macro buttons</h3>
+			<p>Custom G-code macros. You can edit the macro code itself and the button name. Buttons are available above terminal in Terminal tab.</p>
+
+			<br/><br/>
+
+		</p>
+		<div class="clear"></div>
 
 		<h2>Contact & Feedback</h2>
 		<p data-name="support" data-domain="gps-family" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
