--- a/Fluid_Control_Manual.html
+++ b/Fluid_Control_Manual.html
@@ -24,7 +24,7 @@
 		margin-top:40px;
 	}
 	p {
-		max-width: 600px;
+		/* max-width: 600px; */
 		line-height: 1.4em;
 	}
 	p, ol, ul {
@@ -76,6 +76,10 @@
 		margin-right:20px;
 		margin-bottom: 20px;
 	}
+	img {
+		width: 400px;
+		max-width: 50%;
+	}
 </style>
 
 </head>
@@ -95,7 +99,7 @@
 
 		<h2>Connect to FluidNC</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_a.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_a.jpg" alt="Settings screen"  class="left"/>
 			This application is using telnet port for communication with FluidNC controller. Before you attemp connecting to the machine make sure 
 			machine is connected to your Wi-Fi network and Telnet is enabled. To do this open a terminal to the machine and follow instructions <a href="http://wiki.fluidnc.com/en/features/wifi_bt">here</a>.
 			<br/><br/>
@@ -112,7 +116,7 @@
 
 		<h2>Jog tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_jog.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_jog.jpg" alt="Settings screen"  class="left"/>
 			Top quarter of display show current work and machine position. <br/>
 			Yellow buttons next to each coordinate axis sets the current machine position as work start coordinate in currently selected coordinate system.<br/>
 			Feed and step display the currently selected jog feed and step. Tap on them to change the feed and step. Supports decimal numbers.
@@ -125,6 +129,10 @@
 			<br/><br/>
 			Bottom row buttons "Padlock" - clears machine alert.
 			<br/><br/>
+			Home button will perform homing on the machine with $H command. It will home any axeses included in the configuration of FluidNC.
+			Rad more about homing fluidNC <a href="http://wiki.fluidnc.com/en/config/homing_and_limit_switches">here</a>, 
+			keep in mind the FluidNC web configurator has made it very easy to see which exeses are included in homing cycle.
+			<br/><br/>
 			G20 and G21 switch between imperial and metric.
 			<br/><br/>
 			G90 and G91 switch between absolute and relative positioning.
@@ -134,7 +142,7 @@
 
 		<h2>Terminal tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_terminal.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_terminal.jpg" alt="Settings screen" class="left"/>
 
 			Used to send user commands to the machine. Display up to 50 rows. White are machine output, blue are user input.<br/>
 			On top of the terminal you have 6 application macros. Configure the in settings with custom code you need to send to the machine. Supports multi line code.
@@ -147,7 +155,7 @@
 
 		<h2>Job tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_job_a.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_job_a.jpg" alt="Settings screen" class="left"/>
 
 			This tab is use to send .nc or .gcode files to the machine. Application acts as G-code sender.<br/>
 			Jobs are running in foreground service and will display total lines and lines sent in app notification.<br/>
@@ -163,7 +171,7 @@
 
 		<h2>Spindle tab</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_spindle_control.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_spindle_control.jpg" alt="Settings screen"  class="left"/>
 
 			Controls the spindle and coolant. <br/>
 			FluidNC will allow for spindle, mist and flood enabling only if they are assigned control pins on the controller.<br/>
@@ -179,7 +187,7 @@
 
 		<h2>Settings screen</h2>
 		<p>
-			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_b.jpg" alt="Settings screen" width="50%" class="left"/>
+			<img src="https://mitov84.github.io/images_fluid/manual/screen_settings_b.jpg" alt="Settings screen" class="left"/>
 
 			<h3>Telnet</h3>
 			<p>Configure connection to machine</p>
