--- a/Fluid_Control_Manual.html
+++ b/Fluid_Control_Manual.html
@@ -210,6 +210,6 @@
 		<div class="clear"></div>
 
 		<h2>Contact & Feedback</h2>
-		<p data-name="support" data-domain="gps-family" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
+		<p data-name="support" data-domain="artisans3d" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
  
 </html>
