--- a/GPS_Family_Privacy_Policy.html
+++ b/GPS_Family_Privacy_Policy.html
@@ -207,7 +207,7 @@
 		
 		
 		<h2>Contact Us</h2>
-		<p data-name="arhiled" data-domain="proton" data-tld="me" class="cryptedmail">
+		<p data-name="support" data-domain="artisans3d" data-tld="com" class="cryptedmail">
 			If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at 
 		</p>
 				
