--- a/Altimeter_Privacy_Policy.html
+++ b/Altimeter_Privacy_Policy.html
@@ -72,9 +72,9 @@
 	
 		<h1>Privacy Policy</h1>
 		<p>
-			GPS Family LTD built the Altimeter app as
+			Artisans 3D LTD built the Altimeter app as
 			an Ad Supported app. This SERVICE is provided by
-			GPS Family LTD at no cost and is intended for use as
+			Artisans 3D LTD at no cost and is intended for use as
 			is.
 		</p>
 		<p>
@@ -209,7 +209,7 @@
 		
 		
 		<h2>Contact Us</h2>
-		<p data-name="arhiled" data-domain="proton" data-tld="me" class="cryptedmail">
+		<p data-name="support" data-domain="artisans3d" data-tld="com" class="cryptedmail">
 			If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at 
 		</p>
 				
