--- a/FluidControl_Privacy_Policy.html
+++ b/FluidControl_Privacy_Policy.html
@@ -72,9 +72,9 @@
 	
 		<h1>Privacy Policy</h1>
 		<p>
-			GPS Family LTD built the Fluid Control app as
+			Artisans 3D LTD built the Fluid Control app as
 			free app with in-app products. This SERVICE is provided by
-			GPS Family LTD and is intended for use as is.
+			Artisans 3D LTD and is intended for use as is.
 		</p>
 		<p>
 			This page is used to inform visitors regarding our
@@ -190,7 +190,7 @@
 		
 		
 		<h2>Contact Us</h2>
-		<p data-name="support" data-domain="gps-family" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
+		<p data-name="support" data-domain="artisans3d" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
 
 				
 	</body>
