--- a/GPS_Speedometer_Privacy_Policy.html
+++ b/GPS_Speedometer_Privacy_Policy.html
@@ -72,9 +72,9 @@
 	
 		<h1>Privacy Policy</h1>
 		<p>
-			GPS Family LTD built the GPS Speedometer Pro app as
+			Artisans 3D LTD built the GPS Speedometer Pro app as
 			a paid app. This SERVICE is provided by
-			GPS Family LTD and is intended for use as
+			Artisans 3D LTD and is intended for use as
 			is.
 		</p>
 		<p>
@@ -209,7 +209,7 @@
 		
 		
 		<h2>Contact Us</h2>
-		<p data-name="support" data-domain="gps-family" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
+		<p data-name="support" data-domain="artisans3d" data-tld="com" class="cryptedmail">If you have any questions or recommendations please drop us a line at </p>
 
 				
 	</body>
