--- a/Letters_Privacy_Policy.html
+++ b/Letters_Privacy_Policy.html
@@ -72,9 +72,9 @@
 	
 		<h1>Privacy Policy</h1>
 		<p>
-			GPS Family LTD built the Learn the letters app as
+			Artisans 3D LTD built the Learn the letters app as
 			an Ad Supported app. This SERVICE is provided by
-			GPS Family LTD at no cost and is intended for use as
+			Artisans 3D LTD at no cost and is intended for use as
 			is.
 		</p>
 		<p>
